# Django_HW_project

./: .env.sample  .gitignore  data.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py  fill_blogs.py
catalog/migrations/: 0001_initial.py  0002_blog.py  0003_version.py  0004_product_created_by.py  0005_product_is_published.py  0006_alter_product_options.py
catalog/templates/catalog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  category_list.html  contacts.html  home.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html
catalog/templates/catalog/includes/: inc_bottom_menu.html  inc_main_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_verification_key_alter_user_is_active.py
users/templates/users/: login.html  register.html  user_form.html
